--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html></html>
-<head></head>
-<title></title>
-<h1></h1>
-<h2></h2>
+<html lang= "es">
+    <head> 
+        <meta charset= "UTF-8">
+        <meta name="viewport"
+        content="width=device-width, initial-scale= 1.0">   
+    </head>
+    <body> 
+        <ul> 
+     <li> Contacto </li>
+  <a href="horarios de atencion.html">Horarios de atención</a> 
+    <li> Tercer item </li>
+    <li> cuarto item </li>
+</ul>
+<br> 
 
-
-
-<h6></h6>
-<p></p>
-<img>
