--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
         <meta name="viewport"
         content="width=device-width, initial-scale= 1.0">   
     </head>
+
+
+    <header>
+        <h1>Pagina WEB</h>
     <body> 
-        <ul> 
+        <nav> 
+    <ul> 
      <li> Contacto </li>
   <a href="horarios de atencion.html">Horarios de atención</a> 
     <li> Tercer item </li>
     <li> cuarto item </li>
 </ul>
+</nav>
+ </header>
+
 <br> 
 
