--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <body> 
         <nav> 
     <ul> 
-     <li> Contacto </li>
-  <a href="horarios de atencion.html">Horarios de atención</a> 
-    <li> Tercer item </li>
-    <li> cuarto item </li>
+    <li>  <a href="contacto.html"> Contacto </a> </li>
+ <li>  <a href="horarios de atencion.html">Horarios de atención</a> </li>
+    <li> <a href="index.html"> Inicio </a> </li>
+    <li> <a href="galeria.html"> Galería </a> </li>
 </ul>
 </nav>
  </header>
