--- a/contacto.html
+++ b/contacto.html
@@ -2,5 +2,52 @@
 <html lang= "es">
     <head> 
         <meta charset= "UTF-8">
+        <meta name="viewport"
+        content="width=device-width, initial-scale= 1.0">   
      <title> Contacto </title>
     </head>
+
+    <header>
+        <h1>Pagina WEB</h>
+    <body> 
+        <nav> 
+    <ul> 
+        <li> <a href="index.html"> Inicio </a> </li>
+    <li>  <a href="contacto.html"> Contacto </a> </li>
+ <li> <a href="horarios de atencion.html">Horarios de atención</a> </li>
+    <li> <a href="galeria.html"> Galería </a> </li>
+</ul>
+</nav>
+ </header>
+
+ <main> 
+    <form action="#" method="get"> 
+        <div> 
+<label form="myname"> Nombre: </label>
+<input type="text" id="myname" name="campodenombre" placeholder="Pepe">
+        </div>
+
+        <div> 
+            <label for="pass"> Contra: </label>
+        <input type="password" id="pass" name="contra" required>
+        </div>
+<div> <input type="radio" name="sexo"> Masculino
+    <input type="radio" name="sexo"> Femenino
+    <input type="radio" name="sexo"> Otro
+</div>
+<div> 
+    <select name="País" id=""> 
+        <option value="AR"> Argentina </option>
+        <option value="FR"> Francia </option>
+        <option value="BR"> Brasil </option>
+    </select>
+</div>
+<div> 
+    <textarea name="" id="" cols="30" rows="10" maxlength="255"> </textarea>
+</div>
+        <input type="submit" value="Ingresar">
+    </form>
+ </main>
+ </body>
+ <footer> Todos los derechos reservados. Creado por Salomé. </footer>
+ </html> 
