--- a/galeria.html
+++ b/galeria.html
@@ -2,5 +2,29 @@
 <html lang= "es">
     <head> 
         <meta charset= "UTF-8">
+        <meta name="viewport"
+        content="width=device-width, initial-scale= 1.0">   
      <title> Galería </title>
     </head> 
+
+    <header>
+        <h1>Pagina WEB</h>
+    <body> 
+        <nav> 
+    <ul> 
+        <li> <a href="index.html"> Inicio </a> </li>
+    <li>  <a href="contacto.html"> Contacto </a> </li>
+ <li> <a href="horarios de atencion.html">Horarios de atención</a> </li>
+    <li> <a href="galeria.html"> Galería </a> </li>
+</ul>
+</nav>
+ </header>
+
+ <img src="programa.jpg"width= "300" height= "150" alt="Programando de a poco"> 
+
+
+ </body>
+
+ <footer> Todos los derechos reservados. Creado por Salomé. </footer>
+
+ </html>
