--- a/horarios de atencion.html
+++ b/horarios de atencion.html
@@ -2,7 +2,21 @@
 <html lang= "es">
     <head> 
         <meta charset= "UTF-8">
-     <title> Horarios de atencion </title>
+        <meta name="viewport"
+        content="width=device-width, initial-scale= 1.0">   
+        <header>
+            <h1>Pagina WEB</h>
+        <body> 
+            <nav> 
+        <ul> 
+            <li> <a href="index.html"> Inicio </a> </li>
+        <li>  <a href="contacto.html"> Contacto </a> </li>
+     <li> <a href="horarios de atencion.html">Horarios de atención</a> </li>
+        <li> <a href="galeria.html"> Galería </a> </li>
+    </ul>
+    </nav>
+     </header>
+     <title> Horarios de atención </title>
     </head>
     <body>
         <h1> Horarios de atención </h1>
@@ -21,4 +35,5 @@
             </tr>
         </table>
     </body>
-    
+    <footer> Todos los derechos reservados. Creado por Salomé. </footer>
+</html> 
