--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
 
 
     <header>
-        <h1>Pagina WEB</h>
+        <h1> Mi página WEB </h1>
     <body> 
         <nav> 
     <ul> 
+        <li> <a href="index.html"> Inicio </a> </li>
     <li>  <a href="contacto.html"> Contacto </a> </li>
- <li>  <a href="horarios de atencion.html">Horarios de atención</a> </li>
-    <li> <a href="index.html"> Inicio </a> </li>
+ <li> <a href="horarios de atencion.html">Horarios de atención</a> </li>
     <li> <a href="galeria.html"> Galería </a> </li>
 </ul>
 </nav>
  </header>
 
-<br> 
+ <footer> Todos los derechos reservados. Creado por Salomé. </footer>
+
+</html>
 
